# codecrafters-shell-cpp

./: .gitignore  CMakeLists.txt  README.md  codecrafters.yml
junk/: claude_scanner.hpp  linenoise.c  user_input.cpp
src/: autocomplete.cpp  autocomplete.hpp  builtins.cpp  builtins.hpp  claude_scanner.cpp  command.cpp  command.hpp  escapes.hpp  linenoise.c  linenoise.h  main.cpp  path.cpp  path.hpp  scanner.cpp  scanner.hpp  shell.cpp  shell.hpp  user_input.cpp  user_input.hpp
